--- a/views/ex3.handlebars
+++ b/views/ex3.handlebars
@@ -1,14 +1,14 @@
-<b>- Linguagem fortemente tipada</b> é aquela em que os objetos/variáveis tem um tipo bem definido e que precisa ser informado no momento de sua declaração.<br>
-<b>- Linguagem fracamente tipada</b> é aquela em que ao se declarar uma variável o seu tipo de conteúdo não precisa ser declarado, e ao ser fracamente tipada toda e qualquer linguagem de programação será ao mesmo tempo dinamicamente tipada, isto é, se o tipo de conteúdo da variável mudar, automaticamente o seu tipo também muda.
-<table>
-    <thead>
-      <tr>
-        <th colspan="2">Linguagem Fortemente Tipada</th>
-        <th colspan="2">Linguagem Fracamente Tipada</th>
-      </tr>
+<h5 class="bg-primary">Exercício 3</h5>
+
+<table class="table table-striped table-bordered table-responsive">
+    <thead class="text-center">
+        <tr>
+            <th colspan="2">Linguagem Fortemente Tipada</th>
+            <th colspan="2">Linguagem Fracamente Tipada</th>
+        </tr>
     </thead>
     <tbody>
-        <tr>
+        <tr class="text-center">
             <th>Vantagens</th>
             <th>Desvantagens</th>
             <th>Vantagens</th>
@@ -28,3 +28,8 @@
         </tr>
     </tbody>
 </table>
+
+<div class="ms-3 mt-3">
+    <b>- Linguagem fortemente tipada</b> é aquela em que os objetos/variáveis tem um tipo bem definido e que precisa ser informado no momento de sua declaração.<br>
+<b>- Linguagem fracamente tipada</b> é aquela em que ao se declarar uma variável o seu tipo de conteúdo não precisa ser declarado, e ao ser fracamente tipada toda e qualquer linguagem de programação será ao mesmo tempo dinamicamente tipada, isto é, se o tipo de conteúdo da variável mudar, automaticamente o seu tipo também muda.
+</div>
