--- a/views/ex1.handlebars
+++ b/views/ex1.handlebars
@@ -1,6 +1,14 @@
 <meta charset="utf-8">
-<form method="post">
-    <input type="number" name="number"/>
-    <button type="submit">Enviar</button>
+<h5 class="bg-primary">Exercício 1</h5>
+<div class="container p-4">
+    <form method="post" class="input-group">
+        <div class="mb-3">
+            <input type="number" name="number" class="form-control">
+            <div class="form-text">O programa retorna se o valor é POSITIVO, NEGATIVO ou IGUAL A ZERO.</div>
+        </div>
+        <div>
+            <button type="submit" class="btn btn-success mt-4 ms-3">Enviar</button>    
+        </div>
+    </form>
     <h3>{{result}}</h3>
-</form>
+</div>
