--- a/views/ex4.handlebars
+++ b/views/ex4.handlebars
@@ -1,9 +1,17 @@
 <meta charset="utf-8">
-<form method="post">
-    <label for="">Peso:</label>
-    <input type="number" step="0.01" name="weight"/>
-    <label for="">Altura:</label>
-    <input type="number" step="0.01" name="height"/>
-    <button type="submit">Enviar</button>
+<h5 class="bg-primary">Exercício 4</h5>
+<form method="post" class="row ms-1">
+    <div class="col">
+        <label for="">Peso:</label>
+        <input type="number" class="form-control" step="0.01" name="weight"/>
+    </div>
+    <div class="col">
+        <label for="">Altura:</label>
+        <input type="number" class="form-control" step="0.01" name="height"/>
+    </div>
+    <div class="col">
+        <button type="submit" class="btn btn-success mt-4">Enviar</button>
+    </div>
+    <div class="form-text ms-3">O programa retorna o IMC – Índice de Massa Corporal.</div>
     <h3>{{{result}}}</h3>
 </form>
