--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>{{title}}</title>
 </head>
 <body>
+    <nav class="navbar bg-dark">
+        <div class="container-fluid justify-content-start p-1 container">
+          <a class="navbar-brand ms-5 me-5" href="index.html">
+            <!-- <img src="img/logo-removebg-preview.png" alt="Logo Caroline" width="145" height="65"> -->
+            <h4 class="text-light">Menu Inicial</h4>
+          </a>
+          <a class="btn btn-sm btn-outline-primary me-4">1</a>
+          <a class="btn btn-sm btn-outline-primary me-4">2</a>
+          <a class="btn btn-sm btn-outline-primary me-4">3</a>
+          <a class="btn btn-sm btn-outline-primary me-4">4</a>
+          <a class="btn btn-sm btn-outline-primary me-4">5</a>
+          <a class="btn btn-sm btn-outline-primary me-4">6</a>
+          <a class="btn btn-sm btn-outline-primary me-4">7</a>
+          <a class="btn btn-sm btn-outline-primary me-4">8</a>
+          <a class="btn btn-sm btn-outline-primary me-4">9</a>
+          <a class="btn btn-sm btn-outline-primary me-4">10</a>
+          <a class="btn btn-sm btn-outline-primary me-4">11</a>
+          <a class="btn btn-sm btn-outline-primary me-4">12</a>
+          <a class="btn btn-sm btn-outline-primary me-4">13</a>
+          <a class="btn btn-sm btn-outline-primary me-4">14</a>
+          <a class="btn btn-sm btn-outline-primary me-4">15</a>
+        </div>
+      </nav>
     {{{body}}}
+    <div class="text-center p-3 bg-dark" 
+      style="
+      color: white;  
+      bottom: 0;
+      position: fixed;
+      width: 100%;
+      text-align: center;
+      ">
+        © 2020 Copyright: Caroline e Filipe
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
