--- a/views/ex12.handlebars
+++ b/views/ex12.handlebars
@@ -1,4 +1,6 @@
 <meta charset="utf-8">
+<h5 class="bg-primary">Exercício 12</h5>
 <form method="post">
-    <h1>{{{result}}}</h1>
+    <div class="ms-3">O programa retorna os 150 primeiros termos da Sequência de Fibonacci.</div>
+    <h3 class="ms-3" style="margin-bottom: 5rem">{{{result}}}</h3>
 </form>
