--- a/views/ex11.handlebars
+++ b/views/ex11.handlebars
@@ -1,7 +1,10 @@
 <meta charset="utf-8">
+<h5 class="bg-primary">Exercício 11</h5>
 <form method="post">
-    <p>{{{results.result1}}}</p>
-    <p>{{{results.result2}}}</p>
-    <p>{{{results.result3}}}</p>
-    <p>{{{results.result4}}}</p>
+    <div class="row ms-3">
+        <p class="col">{{{results.result1}}}</p>
+        <p class="col">{{{results.result2}}}</p>
+        <p class="col">{{{results.result3}}}</p>
+        <p class="col">{{{results.result4}}}</p>
+    </div>
 </form>
