--- a/views/ex14.handlebars
+++ b/views/ex14.handlebars
@@ -1,6 +1,13 @@
 <meta charset="utf-8">
-<form method="post">
-    <input type="number" name="number"/>
-    <button type="submit">Enviar</button>
-    <h1>{{result}}</h1>
+<h5 class="bg-primary">Exercício 14</h5>
+<form method="post" class="row ms-1">
+    <div class="col">
+        <label for="valores">Digite um número:</label>
+        <input type="number" class="form-control" name="number"/>
+    </div>
+    <div class="col">
+        <button type="submit" class="btn btn-success mt-4">Enviar</button>
+    </div>
+    <div class="form-text">O programa retorna o mês correspondente ao número digitado.</div>
+    <h3>{{{result}}}</h3>
 </form>
