--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,21 +14,21 @@
             <!-- <img src="img/logo-removebg-preview.png" alt="Logo Caroline" width="145" height="65"> -->
             <h4 class="text-light">Menu Inicial</h4>
           </a>
-          <a class="btn btn-sm btn-outline-primary me-4">1</a>
-          <a class="btn btn-sm btn-outline-primary me-4">2</a>
-          <a class="btn btn-sm btn-outline-primary me-4">3</a>
-          <a class="btn btn-sm btn-outline-primary me-4">4</a>
-          <a class="btn btn-sm btn-outline-primary me-4">5</a>
-          <a class="btn btn-sm btn-outline-primary me-4">6</a>
-          <a class="btn btn-sm btn-outline-primary me-4">7</a>
-          <a class="btn btn-sm btn-outline-primary me-4">8</a>
-          <a class="btn btn-sm btn-outline-primary me-4">9</a>
-          <a class="btn btn-sm btn-outline-primary me-4">10</a>
-          <a class="btn btn-sm btn-outline-primary me-4">11</a>
-          <a class="btn btn-sm btn-outline-primary me-4">12</a>
-          <a class="btn btn-sm btn-outline-primary me-4">13</a>
-          <a class="btn btn-sm btn-outline-primary me-4">14</a>
-          <a class="btn btn-sm btn-outline-primary me-4">15</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex1">1</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex2">2</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex3">3</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex4">4</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex5">5</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex6">6</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex7">7</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex8">8</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex9">9</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex10">10</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex11">11</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex12">12</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex13">13</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex14">14</a>
+          <a class="btn btn-sm btn-outline-primary me-4" href="/ex15">15</a>
         </div>
       </nav>
     {{{body}}}
