--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,11 @@
-<h1>Hello</h1>
+<div class="card p-5">
+    <div class="card-header">
+      Tela Inicial
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Programação Web II</h5>
+      <p class="card-text">No menu acima você encontra os exercícios da lista de Express e Handlebars resolvidos.</p>
+      <p class="card-text">Para visualizar a solução basta clicar no número referente ao exercício desejado.</p>
+      <p class="card-text">Para voltar a esta tela, clique na logo do menu.</p>
+    </div>
+</div>
