--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,8 +10,7 @@
 <body>
     <nav class="navbar bg-dark">
         <div class="container-fluid justify-content-start p-1 container">
-          <a class="navbar-brand ms-5 me-5" href="index.html">
-            <!-- <img src="img/logo-removebg-preview.png" alt="Logo Caroline" width="145" height="65"> -->
+          <a class="navbar-brand ms-5 me-5" href="/">
             <h4 class="text-light">Menu Inicial</h4>
           </a>
           <a class="btn btn-sm btn-outline-primary me-4" href="/ex1">1</a>
