--- a/views/ex7.handlebars
+++ b/views/ex7.handlebars
@@ -1,5 +1,14 @@
 <meta charset="utf-8">
-<form method="post">
-    <button type="submit">Jogar</button>
-    <img src="{{result}}" id="" alt="">
-</form>
+<h5 class="bg-primary">Exercício 7</h5>
+<div style="margin-left: 31.2rem;" class="mt-4">
+    <form method="post">
+        <div class="card" style="width: 20rem; height: 25rem;">
+            <div class="card-body text-center">
+                <h5 class="card-title">Jogo de Dados</h5>
+                <p class="card-text">Clique no botão para sortear.</p>
+                <button type="submit" class="btn btn-success" id="botao">Jogar</button>
+            </div>
+            <img src="{{result}}" id="" alt="" style="width: 50%; margin-left: 5rem; margin-bottom: 4rem;">
+        </div>
+    </form>
+</div>
